--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Main
 />
 {% endcapture %} -->
 
-{% include page/title.html title=page.title subtitle=page_subtitle %}
-
+<!-- {% include page/title.html title=page.title subtitle=page_subtitle %}
+ -->
 
 </div>
