--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: page
-title: Main
+title: Welcome!
 ---
 
 <div class="page" markdown="1">
 
-<!-- {% capture page_subtitle %}
+{% capture page_subtitle %}
 <img
     class="me"
     alt="{{ author.name }}"
-    src="{{ site.author.photo | relative_url }}"
+    src="uploads/samakkk.jpeg"
     srcset="{{ site.author.photo2x | relative_url }} 2x"
 />
-{% endcapture %} -->
+{% endcapture %}
 
 <!-- {% include page/title.html title=page.title subtitle=page_subtitle %}
  -->
