--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ title: Welcome!
     class="me"
     alt="{{ author.name }}"
     src="uploads/samakkk.jpeg"
-    srcset="{{ site.author.photo2x | relative_url }} 2x"
+    srcset="uploads/samakkk.jpeg"
 />
 {% endcapture %}
 
-<!-- {% include page/title.html title=page.title subtitle=page_subtitle %}
- -->
+{% include page/title.html title=page.title subtitle=page_subtitle %}
+
 
 </div>
