--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@ title: Welcome!
 <div class="page" markdown="1">
 
 {% capture page_subtitle %}
-<img
-    class="me"
-    alt="{{ author.name }}"
-    src="uploads/samakkk.jpeg"
-    srcset="uploads/samakkk.jpeg"
-/>
+<img src="uploads/samakkk.jpeg" />
 {% endcapture %}
 
 {% include page/title.html title=page.title subtitle=page_subtitle %}
