--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Welcome!
 <img src="uploads/samakkk.jpeg" />
 {% endcapture %}
 
-{% include page/title.html title=page.title subtitle=page_subtitle %}
+<!-- {% include page/title.html title=page.title subtitle=page_subtitle %} -->
 
 
 </div>
