--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: Welcome!
 
 <div class="page" markdown="1">
 
-{% capture page_subtitle %}
+<!-- {% capture page_subtitle %} -->
 <img src="uploads/samakkk.jpeg" />
-{% endcapture %}
+<!-- {% endcapture %} -->
 
 <!-- {% include page/title.html title=page.title subtitle=page_subtitle %} -->
 
