--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Welcome!
 <div class="page" markdown="1">
 
 <!-- {% capture page_subtitle %} -->
-<img src="uploads/samakkk.jpeg" />
+<img src="uploads/samakkk.jpeg" width="600"/>
 <!-- {% endcapture %} -->
 
 <!-- {% include page/title.html title=page.title subtitle=page_subtitle %} -->
